# prueba_continua_IAE

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
DATOS/: catalogo_maestro.csv  catalogo_maestro_final.csv
datos_procesados/: TCGA_CS_4941_1.npy  TCGA_CS_4941_10.npy  TCGA_CS_4941_11.npy  TCGA_CS_4941_11_m.npy  TCGA_CS_4941_12.npy  TCGA_CS_4941_12_m.npy  TCGA_CS_4941_13.npy  TCGA_CS_4941_13_m.npy  TCGA_CS_4941_14.npy  TCGA_CS_4941_14_m.npy  TCGA_CS_4941_15.npy  TCGA_CS_4941_15_m.npy  TCGA_CS_4941_16.npy  TCGA_CS_4941_16_m.npy  TCGA_CS_4941_17.npy  TCGA_CS_4941_17_m.npy  TCGA_CS_4941_18.npy  TCGA_CS_4941_18_m.npy  TCGA_CS_4941_19.npy  TCGA_CS_4941_2.npy  TCGA_CS_4941_20.npy  TCGA_CS_4941_21.npy  TCGA_CS_4941_22.npy  TCGA_CS_4941_23.npy  TCGA_CS_4941_3.npy  TCGA_CS_4941_4.npy  TCGA_CS_4941_5.npy  TCGA_CS_4941_6.npy  TCGA_CS_4941_7.npy  TCGA_CS_4941_8.npy  TCGA_CS_4941_9.npy  TCGA_CS_4942_1.npy  TCGA_CS_4942_10.npy  TCGA_CS_4942_10_m.npy  TCGA_CS_4942_11.npy  TCGA_CS_4942_11_m.npy  TCGA_CS_4942_12.npy  TCGA_CS_4942_12_m.npy  TCGA_CS_4942_13.npy  TCGA_CS_4942_13_m.npy  (+5272 more)
datos_procesados/evaluacion_calidad/: informe_calidad.txt  metricas_por_imagen.csv  resumen_metricas.txt
datos_procesados/mascaras_predichas/: TCGA_CS_4941_10_mask.npy  TCGA_CS_4941_18_mask.npy  TCGA_CS_4941_1_mask.npy  TCGA_CS_4943_19_mask.npy  TCGA_CS_4943_5_mask.npy  TCGA_CS_4944_15_mask.npy  TCGA_CS_4944_19_mask.npy  TCGA_CS_5393_10_mask.npy  TCGA_CS_5393_2_mask.npy  TCGA_CS_5393_8_mask.npy  (+247 more)
src/: datos.py  mapeo_archivos.py  transformar_datos.py
(+814 files in other folders)
