[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "albumentations>=2.0.8",
    "bs4>=0.0.2",
    "dagster>=1.12.20",
    "dagster-graphql>=1.12.20",
    "dagster-webserver>=1.12.20",
    "dask[distributed]>=2026.1.2",
    "docx>=0.2.4",
    "flyte>=2.0.1",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "path>=17.1.1",
    "plotly>=6.6.0",
    "prefect>=3.6.19",
    "pyarrow>=23.0.1",
    "pyreadstat>=1.3.3",
    "requests>=2.32.5",
    "rpy2>=3.6.7",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.3",
    "siuba>=0.4.2",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "ucimlrepo>=0.0.7",
]
