[project]
name = "proyecto"
version = "0.1.0"
description = "MRAI - Análisis de tumores cerebrales"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "pillow",
    "opencv-python-headless",
    "scikit-image",
    "scikit-learn",
    "joblib",
    "torch",
    "torchvision",
]